# compute

./: Cargo.toml  readme.md
examples/: config.json5
modules/: appImage.json5  git.json5  golang.json5  networking.json5  rust.json5
modules/templates/git/: config
modules/templates/networking/: hostname  hosts
src/: ioutil.rs  ioutils.rs  main.rs  modules.rs  opts.rs  provisioner.rs  result.rs  templates.rs
src/actions/: app_image.rs  apt.rs  exec.rs  file.rs  mod.rs  s3.rs
src/config/: app_image.rs  apt.rs  files.rs  mod.rs  networking.rs  s3.rs  scripts.rs
