[package]
name = "compute"
version = "0.1.0"
authors = ["Dillen Meijboom <info@dmeijboom.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json5 = "0.2"
log = "0.4.11"
reqwest = "0.10"
crc32fast = "1.2.0"
pretty_env_logger = "0.4"
clap = { version = "3.0.0-beta.1" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["fs", "macros", "process"] }
